# sparse-solver

./: .gitignore  CMakeLists.txt  Readme.md
include/base/: afxdef.h  eigen_types.h  linear_solver.h  macros.h  marginal_covariance_cholesky.h  matrix_operations.h  matrix_structure.h  misc.h  sparse_block_matrix.h  sparse_block_matrix.hpp  sparse_block_matrix_ccs.h
include/cholmod/: linear_solver_cholmod.h
include/csparse/: csparse_extension.h  csparse_helper.h  fblock_solver_csparse_api.h  fblock_solver_csparse_extension_api.h  linear_solver_csparse.h
include/pcg/: linear_solver_pcg.h  linear_solver_pcg.hpp
src/base/: marginal_covariance_cholesky.cpp  matrix_structure.cpp
src/csparse/: csparse_extension.cpp  csparse_helper.cpp
test/: test_cholmod.cpp  test_pcg.cpp  test_sparse_solver_cs.cpp
